# bitfield

./: AGENTS.md  README.md  meson.build  meson_options.txt
config/: bitfield_version.h.in
include/: bitfield.h
src/: bitfield.c
tests/: meson.build  test_bitfield.c  test_compile_time_checks.sh
